fixed alignement in second section

--- a/css/style.css
+++ b/css/style.css
@@ -80,6 +80,7 @@ header {
 
 #second-section .row img {
 	border-radius: 12px;
+	box-shadow: 0 6px 18px 0 rgba(0, 0, 0, 0.26);
 }
 
 .card-panel {
@@ -92,6 +93,16 @@ header {
 	min-height: 118px; /*defined the value based on the img height when it disappears*/
 	max-width: 100%;
 	margin: 0px; /*the card-panel comes with margins as default. this will eliminate them. inspect to show the margins*/
+	box-shadow: 0 6px 18px 0 rgba(0, 0, 0, 0.26);
+	padding: 0 30px 0 30px;
+}
+
+#second-section .zero-padding-left {
+	padding-left: 0;
+}
+
+#second-section .zero-padding-right {
+	padding-right: 0;
 }
 
 @media (max-width: 992px) {
